--- a/css/main.css
+++ b/css/main.css
@@ -2115,28 +2115,29 @@ main .qna .inner .qna_view_title button:hover {
 
 /* login */
 .login_container {
-  position: relative;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: var(--padding-100-0);
 }
 .login_container article {
-  position: absolute;
-  left: 50%;
-  top: 50%;
   width: 500px;
   padding: var(--padding-50);
-  transform: translate(-50%, -50%);
   border: 1px solid var(--blue);
   border-radius: 20px;
   box-shadow: 0px 3px 6px #00000029;
+}
+.login_container article .title {
+  color: var(--blue);
+  font-size: var(--font-xx-large);
+  text-align: center;
+  margin-bottom: var(--padding-30);
 }
 .login_container article .block {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: var(--padding-50);
+  margin-bottom: var(--padding-30);
 }
 .login_container article .block label {
   position: absolute;
@@ -2159,6 +2160,17 @@ main .qna .inner .qna_view_title button:hover {
   border: 0;
   border-bottom: 2px solid var(--gray-opacity-50);
 }
+.login_container article .block .login_close {
+  display: none;
+  position: absolute;
+  right: 10px;
+  bottom: 18px;
+  color: var(--gray-opacity-50);
+  cursor: pointer;
+}
+.login_container article .block input:valid ~ .login_close {
+  display: block;
+}
 .login_container article .block input:focus + label,
 .login_container article .block input:valid + label {
   top: 0;
@@ -2170,6 +2182,7 @@ main .qna .inner .qna_view_title button:hover {
   opacity: 0;
   color: var(--gray-opacity-50);
   font-size: var(--font-small);
+  transition: 300ms;
 }
 .login_container article .block input:focus::placeholder {
   opacity: 1;
@@ -2202,7 +2215,7 @@ main .qna .inner .qna_view_title button:hover {
 .login_container article .block a:hover {
   color: var(--sky-blue);
 }
-.login_container article button {
+.login_container article button[type='submit'] {
   width: 100%;
   height: var(--size-button-h);
   line-height: var(--size-button-h);
